# editorial-voting

editorial-voting-backend/: Cargo.toml  README.md  scheme.sql
editorial-voting-backend/src/: api.rs  atcoder_api.rs  main.rs
editorial-voting-backend/src/api/: create_affiliation_token.rs  create_token.rs  status.rs  statuses.rs  vote.rs
editorial-voting-userscript/: README.md  atcoder-editorial-voting.user.js
editorial-voting-vercel-serverless-function/: .gitignore  Cargo.toml  README.md  package.json  scheme.sql  vercel.json
editorial-voting-vercel-serverless-function/api/: create_affiliation_token.rs  create_token.rs  status.rs  statuses.rs  vote.rs
editorial-voting-vercel-serverless-function/src-rs/: atcoder_api.rs  database.rs  lib.rs
