[package]
name = "editorial-voting-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
awc = { version = "3.4.0", features = ["tls-rustls-0_22", "rustls"] }
hex = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.4"
rusqlite = "0.31.0"
rustls = "0.22"
rustls-pemfile = "2.1.2"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
urlencoding = "2.1.3"
