[package]
name = "editorial-voting-vercel-serverless-function"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
rand = "0.9.0"
url = "2.4.1"
vercel_runtime = "1.1.3"
sha2 = "0.10.8"
regex = "1.11.1"
hex = "0.4.3"
reqwest = { version = "0.12.12" }
scraper = "0.22.0"
tokio-postgres = "0.7.13"
postgres = "0.19.10"
tower-service = "0.3.3"
openssl = "0.10.70"
postgres-openssl = "0.5.1"
urlencoding = "2.1.3"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "create_affiliation_token"
path = "api/create_affiliation_token.rs"

[[bin]]
name = "create_token"
path = "api/create_token.rs"

[[bin]]
name = "status"
path = "api/status.rs"
